objects/OAuth_Jwt_Token2__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>stored integration callout credential name/</description>
    <fields>
        <fullName>Certificate__c</fullName>
        <label>Certificate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (Minute)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JWT_Token2__c</fullName>
        <label>JWT_Token2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JWT_Token3__c</fullName>
        <label>JWT_Token3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JWT_Token4__c</fullName>
        <label>JWT_Token4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Time__c</fullName>
        <label>Last Updated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <label>OAuth Jwt Token CallOut</label>
</CustomObject>